--- a/account_move_so_import/i18n/account_move_so_import.pot
+++ b/account_move_so_import/i18n/account_move_so_import.pot
@@ -1,28 +1,22 @@
-# Spanish translation for banking-addons
-# Copyright (c) 2014 Rosetta Contributors and Canonical Ltd 2014
-# This file is distributed under the same license as the banking-addons package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2014.
+# Translation of Odoo Server.
+# This file contains the translation of the following modules:
+#	* account_move_so_import
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: banking-addons\n"
+"Project-Id-Version: Odoo Server 12.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-01-21 12:04+0000\n"
-"PO-Revision-Date: 2014-06-05 22:41+0000\n"
-"Last-Translator: Pedro Manuel Baeza <pedro.baeza@gmail.com>\n"
-"Language-Team: Spanish <es@li.org>\n"
-"Language: es\n"
+"Last-Translator: <>\n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-06-06 06:36+0000\n"
-"X-Generator: Launchpad (build 17031)\n"
+"Content-Transfer-Encoding: \n"
+"Plural-Forms: \n"
 
 #. module: account_move_so_import
 #: model:ir.model,name:account_move_so_import.model_account_move_completion_rule
-#, fuzzy
 msgid "Account move completion method"
-msgstr "account.statement.completion.rule"
+msgstr ""
 
 #. module: account_move_so_import
 #: selection:account.move.completion.rule,function_to_call:0
@@ -51,13 +45,9 @@ msgstr ""
 
 #. module: account_move_so_import
 #: code:addons/account_move_so_import/models/account_move.py:42
-#, fuzzy, python-format
-msgid ""
-"Line named \"%s\"  was matched by more than one partner while looking on SO "
-"by ref."
+#, python-format
+msgid "Line named \"%s\"  was matched by more than one partner while looking on SO by ref."
 msgstr ""
-"La línea llamada \"%s\" (Ref: %s) se casó con más de una empresa al buscar "
-"por referencia de pedido."
 
 #. module: account_move_so_import
 #: selection:account.move.completion.rule,function_to_call:0
@@ -73,3 +63,4 @@ msgstr ""
 #: model:ir.model.fields,field_description:account_move_so_import.field_account_move_completion_rule__function_to_call
 msgid "Method"
 msgstr ""
+
