--- a/account_move_so_import/i18n/account_move_so_import.pot
+++ b/account_move_so_import/i18n/account_move_so_import.pot
@@ -1,12 +1,12 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* account_move_so_import
+# 	* account_move_so_import
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 12.0\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: <>\n"
+"Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,48 +19,25 @@ msgid "Account move completion method"
 msgstr ""
 
 #. module: account_move_so_import
-#: selection:account.move.completion.rule,function_to_call:0
+#: model:ir.model.fields.selection,name:account_move_so_import.selection__account_move_completion_rule__function_to_call__get_from_name_and_so
 msgid "From line name (based on SO number)"
 msgstr ""
 
 #. module: account_move_so_import
-#: selection:account.move.completion.rule,function_to_call:0
-msgid "From line name (based on customer invoice number)"
+#: model:ir.model.fields.selection,name:account_move_so_import.selection__account_move_completion_rule__function_to_call__get_from_name_and_so_payment_ref
+msgid "From line name (based on SO payment ref)"
 msgstr ""
 
 #. module: account_move_so_import
-#: selection:account.move.completion.rule,function_to_call:0
-msgid "From line name (based on partner field)"
-msgstr ""
-
-#. module: account_move_so_import
-#: selection:account.move.completion.rule,function_to_call:0
-msgid "From line name (based on partner name)"
-msgstr ""
-
-#. module: account_move_so_import
-#: selection:account.move.completion.rule,function_to_call:0
-msgid "From line name (based on supplier invoice number)"
-msgstr ""
-
-#. module: account_move_so_import
-#: code:addons/account_move_so_import/models/account_move.py:42
+#. odoo-python
+#: code:addons/account_move_so_import/models/account_move.py:0
 #, python-format
-msgid "Line named \"%s\"  was matched by more than one partner while looking on SO by ref."
-msgstr ""
-
-#. module: account_move_so_import
-#: selection:account.move.completion.rule,function_to_call:0
-msgid "Match Invoice using transaction ID"
-msgstr ""
-
-#. module: account_move_so_import
-#: selection:account.move.completion.rule,function_to_call:0
-msgid "Match Sales Order using transaction ID"
+msgid ""
+"Line named \"%s\" was matched by more than one partner while looking on SO "
+"by ref."
 msgstr ""
 
 #. module: account_move_so_import
 #: model:ir.model.fields,field_description:account_move_so_import.field_account_move_completion_rule__function_to_call
 msgid "Method"
 msgstr ""
-
