--- a/account_statement_base/i18n/account_statement_base.pot
+++ b/account_statement_base/i18n/account_statement_base.pot
@@ -54,7 +54,7 @@ msgstr ""
 
 #. module: account_statement_base
 #: model_terms:ir.ui.view,arch_db:account_statement_base.account_bank_statement_line_search
-msgid "Label, Ref or Notes"
+msgid "Label, Ref, Notes or Amount"
 msgstr ""
 
 #. module: account_statement_base
