--- a/account_statement_base/i18n/fr.po
+++ b/account_statement_base/i18n/fr.po
@@ -57,8 +57,8 @@ msgstr ""
 
 #. module: account_statement_base
 #: model_terms:ir.ui.view,arch_db:account_statement_base.account_bank_statement_line_search
-msgid "Label, Ref or Notes"
-msgstr "Libellé, Réf ou Notes"
+msgid "Label, Ref, Notes or Amount"
+msgstr "Libellé, Réf, Notes ou Montant"
 
 #. module: account_statement_base
 #: model_terms:ir.ui.view,arch_db:account_statement_base.account_bank_statement_line_search
