--- a/account_statement_base/i18n/pt_BR.po
+++ b/account_statement_base/i18n/pt_BR.po
@@ -58,8 +58,8 @@ msgstr ""
 
 #. module: account_statement_base
 #: model_terms:ir.ui.view,arch_db:account_statement_base.account_bank_statement_line_search
-msgid "Label, Ref or Notes"
-msgstr "Rótulo, Ref ou Notas"
+msgid "Label, Ref, Notes or Amount"
+msgstr "Rótulo, Ref, Notas ou Valor"
 
 #. module: account_statement_base
 #: model_terms:ir.ui.view,arch_db:account_statement_base.account_bank_statement_line_search
