--- a/account_statement_base/i18n/sv.po
+++ b/account_statement_base/i18n/sv.po
@@ -57,8 +57,8 @@ msgstr ""
 
 #. module: account_statement_base
 #: model_terms:ir.ui.view,arch_db:account_statement_base.account_bank_statement_line_search
-msgid "Label, Ref or Notes"
-msgstr "Etikett, referens eller anteckningar"
+msgid "Label, Ref, Notes or Amount"
+msgstr "Etikett, referens, anteckningar eller belopp"
 
 #. module: account_statement_base
 #: model_terms:ir.ui.view,arch_db:account_statement_base.account_bank_statement_line_search
