--- a/account_statement_base/i18n/tr.po
+++ b/account_statement_base/i18n/tr.po
@@ -57,8 +57,8 @@ msgstr ""
 
 #. module: account_statement_base
 #: model_terms:ir.ui.view,arch_db:account_statement_base.account_bank_statement_line_search
-msgid "Label, Ref or Notes"
-msgstr "Etiket, Referans veya Notlar"
+msgid "Label, Ref, Notes or Amount"
+msgstr "Etiket, Referans, Notlar veya Tutar"
 
 #. module: account_statement_base
 #: model_terms:ir.ui.view,arch_db:account_statement_base.account_bank_statement_line_search
